--- a/templates/main.html
+++ b/templates/main.html
@@ -179,6 +179,13 @@
                             </span>
                         </a>
                     </li>
+                    <li style="background: #cccccc;">
+                        <a href="admin">
+                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                                疫情数据后台管理
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 {#			<div id="title">全国疫情实时追踪</div>#}
