--- a/templates/world.html
+++ b/templates/world.html
@@ -180,6 +180,13 @@
                             </span>
                         </a>
                     </li>
+                    <li style="background: #cccccc;">
+                        <a href="admin">
+                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                                疫情数据后台管理
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 			<div id="tim"></div>
